--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,10 +17,10 @@
         tools:layout="@layout/fragment_box_selection" >
         <action
             android:id="@+id/action_boxSelectionFragment_to_boxFragment2"
-            app:destination="@id/boxFragment2" />
+            app:destination="@id/boxFragment" />
     </fragment>
     <fragment
-        android:id="@+id/boxFragment2"
+        android:id="@+id/boxFragment"
         android:name="com.example.navexample.BoxFragment"
         android:label="fragment_box"
         tools:layout="@layout/fragment_box" />
